--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClCompile Include="Source\Bullet.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SceneGuardBuilding.cpp">
+      <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -247,6 +250,9 @@
     </ClInclude>
     <ClInclude Include="Source\Bullet.h">
       <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneGuardBuilding.h">
+      <Filter>Header Files\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
