--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Scene2021.cpp" />
     <ClCompile Include="Source\SceneGarage.cpp" />
+    <ClCompile Include="Source\SceneGuardBuilding.cpp" />
     <ClCompile Include="Source\SceneGunShop.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\UIItem.cpp" />
@@ -222,6 +223,7 @@
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\Scene2021.h" />
     <ClInclude Include="Source\SceneGarage.h" />
+    <ClInclude Include="Source\SceneGuardBuilding.h" />
     <ClInclude Include="Source\SceneGunShop.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\UIManager.h" />
