--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Scene2021.cpp" />
+    <ClCompile Include="Source\SceneCorridor.cpp" />
     <ClCompile Include="Source\SceneGarage.cpp" />
     <ClCompile Include="Source\SceneGuardBuilding.cpp" />
     <ClCompile Include="Source\SceneGunShop.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\Scene2021.h" />
+    <ClInclude Include="Source\SceneCorridor.h" />
     <ClInclude Include="Source\SceneGarage.h" />
     <ClInclude Include="Source\SceneGuardBuilding.h" />
     <ClInclude Include="Source\SceneGunShop.h" />
