--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -224,11 +224,11 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\Scene2021.h" />
+    <ClInclude Include="Source\SceneHouseFire.h" />
     <ClInclude Include="Source\SceneTimePortal.h" />
     <ClInclude Include="Source\SceneGarage.h" />
     <ClInclude Include="Source\SceneGuardBuilding.h" />
     <ClInclude Include="Source\SceneGunShop.h" />
-    <ClCompile Include="Source\SceneHouseFire.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\UIManager.h" />
     <ClInclude Include="Source\Utility.h" />
