UI inventory for items/weapons/garage is done

--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -130,7 +130,9 @@
     <ClCompile Include="Source\SceneTimePortal.cpp">
       <Filter>Source Files\Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="Source\SceneHouseFire.cpp" />
+    <ClCompile Include="Source\SceneHouseFire.cpp">
+      <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -277,7 +279,9 @@
     <ClInclude Include="Source\SceneTimePortal.h">
       <Filter>Header Files\Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="Source\SceneHouseFire.h" />
+    <ClInclude Include="Source\SceneHouseFire.h">
+      <Filter>Header Files\Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
