--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClCompile Include="Source\SceneHouseFire.cpp">
       <Filter>Source Files\Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SceneCarShop.cpp">
+      <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -280,6 +283,9 @@
       <Filter>Header Files\Scenes</Filter>
     </ClInclude>
     <ClInclude Include="Source\SceneHouseFire.h">
+      <Filter>Header Files\Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneCarShop.h">
       <Filter>Header Files\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
