--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Scene2021.cpp" />
     <ClCompile Include="Source\SceneCarShop.cpp" />
+    <ClCompile Include="Source\SceneFinale.cpp" />
     <ClCompile Include="Source\SceneHouseFire.cpp" />
     <ClCompile Include="Source\SceneOffice.cpp" />
     <ClCompile Include="Source\SceneTimePortal.cpp" />
@@ -228,6 +229,7 @@
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\Scene2021.h" />
     <ClInclude Include="Source\SceneCarShop.h" />
+    <ClInclude Include="Source\SceneFinale.h" />
     <ClInclude Include="Source\SceneHouseFire.h" />
     <ClInclude Include="Source\SceneOffice.h" />
     <ClInclude Include="Source\SceneTimePortal.h" />
